fix: add type=module for Pages build

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <!-- 單一蘑菇按鈕 -->
   <button id="mushroomBtn" aria-label="棕色蘑菇按鈕" title="按我！">🍄‍🟫<span class="visually-hidden"> 按鈕 </span></button>
   </main>
-  <script src="script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
